--- a/doc/hecke.bib
+++ b/doc/hecke.bib
@@ -95,6 +95,7 @@ MRREVIEWER = {Robert B{\'e}dard},
               {${\rm GL}_n$}) at roots of unity},
    JOURNAL = {Internat. Math. Res. Notices},
   FJOURNAL = {International Mathematics Research Notices},
+    VOLUME = {1994},
       YEAR = {1994},
     NUMBER = {5},
      PAGES = {215 ff., approx.\ 3 pp.\ (electronic)},
@@ -219,6 +220,7 @@ MRREVIEWER = {Thomas M. Halverson},
      TITLE = {Canonical bases of {$q$}-deformed {F}ock spaces},
    JOURNAL = {Internat. Math. Res. Notices},
   FJOURNAL = {International Mathematics Research Notices},
+    VOLUME = {1996},
       YEAR = {1996},
     NUMBER = {9},
      PAGES = {447--456},
