--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 1.5
     - transfer maintainership of the package to the GAP team
     - moved package to GitHub
+    - fix error in CombineEQuotientECore, see <https://github.com/gap-packages/hecke/issues/1>
 
 1.4
     - fixed HTML in PackageInfo.g
