--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.5.1
+    - remove use of obsolete and undocumented GAP function `InfoRead1`
+
 1.5
     - transfer maintainership of the package to the GAP team
     - moved package to GitHub
