--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,10 @@
-1.XXX
+1.5.3
     - remove unused and undocumented FoldLeft operation
     - remove unused and undocumented * method for functions (to
       allow function composition)
     - remove unused, undocumented and broken TeX support in undocumented
       function DecompositionMatrixString
+    - clarify package licensing terms (GPL 2 or later)
     - various janitorial changes
 
 1.5.2
