--- a/doc/hecke.bib
+++ b/doc/hecke.bib
@@ -31,7 +31,7 @@ MRREVIEWER = {Meinolf Geck},
   MRNUMBER = {1643413 (2000d:20007)},
 MRREVIEWER = {Christine Bessenrodt},
        DOI = {10.1112/S0024611598000562},
-       URL = {http://dx.doi.org/10.1112/S0024611598000562},
+       URL = {https://doi.org/10.1112/S0024611598000562},
 }
 
 @article {DJ1,
@@ -49,7 +49,7 @@ MRREVIEWER = {Christine Bessenrodt},
   MRNUMBER = {812444 (88b:20065)},
 MRREVIEWER = {G. I. Lehrer},
        DOI = {10.1112/plms/s3-52.1.20},
-       URL = {http://dx.doi.org/10.1112/plms/s3-52.1.20},
+       URL = {https://doi.org/10.1112/plms/s3-52.1.20},
 }
 
 @article {DJ2,
@@ -68,7 +68,7 @@ MRREVIEWER = {G. I. Lehrer},
   MRNUMBER = {872250 (88m:20084)},
 MRREVIEWER = {J. Ritter},
        DOI = {10.1112/plms/s3-54.1.57},
-       URL = {http://dx.doi.org/10.1112/plms/s3-54.1.57},
+       URL = {https://doi.org/10.1112/plms/s3-54.1.57},
 }
 
 @article {G,
@@ -86,7 +86,7 @@ MRREVIEWER = {J. Ritter},
   MRNUMBER = {1179271 (94a:20019)},
 MRREVIEWER = {Robert B{\'e}dard},
        DOI = {10.1080/00927879208824499},
-       URL = {http://dx.doi.org/10.1080/00927879208824499},
+       URL = {https://doi.org/10.1080/00927879208824499},
 }
 
 @article {Gr,
@@ -104,7 +104,7 @@ MRREVIEWER = {Robert B{\'e}dard},
   MRNUMBER = {1270135 (95e:20054)},
 MRREVIEWER = {Jie Du},
        DOI = {10.1155/S1073792894000243},
-       URL = {http://dx.doi.org/10.1155/S1073792894000243},
+       URL = {https://doi.org/10.1155/S1073792894000243},
 }
 
 @article {J,
@@ -123,7 +123,7 @@ MRREVIEWER = {Jie Du},
   MRNUMBER = {1031453 (91c:20024)},
 MRREVIEWER = {Richard Dipper},
        DOI = {10.1112/plms/s3-60.2.225},
-       URL = {http://dx.doi.org/10.1112/plms/s3-60.2.225},
+       URL = {https://doi.org/10.1112/plms/s3-60.2.225},
 }
 
 @book {JK,
@@ -157,7 +157,7 @@ MRREVIEWER = {A. O. Morris},
   MRNUMBER = {1402572 (97h:20017)},
 MRREVIEWER = {Meinolf Geck},
        DOI = {10.1006/jabr.1996.0251},
-       URL = {http://dx.doi.org/10.1006/jabr.1996.0251},
+       URL = {https://doi.org/10.1006/jabr.1996.0251},
 }
 
 @article {JM2,
@@ -175,7 +175,7 @@ MRREVIEWER = {Meinolf Geck},
   MRNUMBER = {1425323 (97j:20013)},
 MRREVIEWER = {Stuart Martin},
        DOI = {10.1112/S0024611597000099},
-       URL = {http://dx.doi.org/10.1112/S0024611597000099},
+       URL = {https://doi.org/10.1112/S0024611597000099},
 }
 
 @article {K,
@@ -229,7 +229,7 @@ MRREVIEWER = {Thomas M. Halverson},
   MRNUMBER = {1399410 (97h:17023)},
 MRREVIEWER = {Yvette Kosmann-Schwarzbach},
        DOI = {10.1155/S1073792896000293},
-       URL = {http://dx.doi.org/10.1155/S1073792896000293},
+       URL = {https://doi.org/10.1155/S1073792896000293},
 }
 
 @Misc{M,
@@ -246,7 +246,7 @@ MRREVIEWER = {Yvette Kosmann-Schwarzbach},
 		 classification of simple modules for cyclotomic Hecke
 		 algebras of type G(m,1,n) and Kleshchev
 		 multipartitions",
-  URL =  	{http://arxiv.org/abs/q-alg/9607005},
+  URL =  	{https://arxiv.org/abs/q-alg/9607005},
 }
 
 @article {M1,
@@ -283,6 +283,6 @@ MRREVIEWER = {Richard M. Green},
   MRNUMBER = {1750939 (2001e:20007)},
 MRREVIEWER = {Gerhard Hiss},
        DOI = {10.1007/s002090050489},
-       URL = {http://dx.doi.org/10.1007/s002090050489},
+       URL = {https://doi.org/10.1007/s002090050489},
 }
 
