--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
-1.5.3
+1.5.4 (2024-08-27)
+    - various janitorial changes
+
+1.5.3 (2019-09-01)
     - remove unused and undocumented FoldLeft operation
     - remove unused and undocumented * method for functions (to
       allow function composition)
